...
    <string name="from_network_data_source">From Network Data Source</string>
    <string name="on_map">On Map</string>
    <string name="network_data_source">Network Data Source</string>
    <string name="available_asset_types">Available Asset Types</string>
    <string name="count">Count %1$d</string>
    <string name="new_association">New Association</string>
    <string name="add">Add</string>
    <string name="failed_to_create_association">Failed to create association. %1$s</string>
    <string name="available_features">%1$d Available Features</string>
    <string name="loading2">Loading..</string>
    <plurals name="you_have_errors_that_must_be_fixed_before_saving">
        <item quantity="zero">You have %1$d errors that must be fixed before saving.</item>
        <item quantity="one">You have %1$d error that must be fixed before saving.</item>
...
    <string name="choose_to_add">Choose to add</string>
    <string name="no_features_found">No features found</string>
    <string name="refine_your_search_tip">Refine your search or choose a different Network Source.</string>
    <string name="select_terminal">Select Terminal</string>
    <string name="show_on_map">Show on Map</string>
    <string name="more_information">More Information</string>
    <string name="add_associations">Add Associations</string>
    <string name="filter_features">Filter Features</string>
    <string name="apply">Apply</string>
    <string name="add_condition">Add Condition</string>
    <string name="no_conditions_added">No conditions added.</string>
    <string name="show_features_that_meet_all_the_conditions">Show features that meet all the conditions.</string>
    <string name="condition">Condition</string>
...
