...
                    state.navigateTo(feature, backStackEntry)
                },
                modifier = Modifier.fillMaxSize()
            )
            FeatureFormDialog(states)
            LaunchedEffect(featureForm) {
                Log.e("TAG", "Associations: ${featureForm.feature.objectId}")
                // Update the active feature form if we navigate back to this screen from another form.
                state.updateActiveFeatureForm()
            }
        }
    }
    LaunchedEffect(navController) {
...
