...
        }

        // form content
        LazyColumn(
            modifier = Modifier
                .fillMaxSize()
                .semantics { contentDescription = "lazy column" },
            state = lazyListState
        ) {
            formStateData.stateCollection.forEach { entry ->
                item {
                    when (entry.formElement) {
                        is FieldFormElement -> {
...
